Fix search bar gap

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -790,6 +790,7 @@ tr.email-setting-row {
 			margin-left: auto;
 			align-self: center;
 			display: flex;
+			gap: 2px;
 		}
 	}
 }
